--- a/css/admin/form-templates.css
+++ b/css/admin/form-templates.css
@@ -55,10 +55,6 @@
 	background-color: var(--grey-100);
 }
 
-.frm-form-templates-cat-item:focus {
-	outline: 2px solid var(--primary-700);
-}
-
 .frm-form-templates-cat-item > * {
 	z-index: 2;
 }
@@ -109,7 +105,7 @@
 	background-color: var(--grey-50);
 }
 
-#frm-form-templates-create-form:focus {
+#frm-form-templates-create-form:focus-within {
 	outline: 1px solid var(--primary-700);
 	border-color: var(--primary-700);
 }
