--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -7152,7 +7152,8 @@ i.frm-show-inline-modal {
 	padding: var(--gap-xs);
 }
 
-#wpwrap .frm-search input[type="search"] {
+#wpwrap .frm-search input[type="search"],
+#wpwrap .frm-search input[type="text"] {
 	padding-left: var(--gap-xl) !important;
 }
 
