--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -7456,14 +7456,14 @@ ul .frm_col_two {
 	float: right;
 }
 
-.frm_two_col li {
-	float: left;
-	width: 48%;
-	margin-right: 4%;
+ul.frm_two_col {
+	display: grid;
+	grid-template-columns: repeat(2, minmax(0, 1fr));
+	gap: var(--gap-sm);
 }
 
-.frm_two_col li:nth-child(2n+2) {
-	margin-right: 0;
+.frm_two_col li {
+	margin-bottom: 0;
 }
 
 .frm-info-modal a,
