--- a/css/admin/dashboard.css
+++ b/css/admin/dashboard.css
@@ -292,6 +292,9 @@
 .frm-widget-placeholder {
 	width: 100%;
 	position: relative;
+	display: flex;
+	align-items: center;
+    justify-content: center;
 }
 
 .frm-widget-placeholder[data-background="chart-placeholder"] {
@@ -308,23 +311,8 @@
 }
 
 .frm-widget-placeholder > div {
-	position: absolute;
-	top: 0; left: 0; right: 0; bottom: 0;
-	margin: auto;
 	max-width: 337px;
-	height: 130px;
 	text-align: center;
-}
-
-.frm-widget-placeholder > div h4 {
-	color: #282F36;
-	font-size: var(--text-md);
-	font-weight: 700;
-}
-
-.frm-widget-placeholder > div p {
-	margin-top: var( --gap-sm );
-	margin-bottom: var( --gap-md );
 }
 /* END Chart Placeholder */
 
