deprecate FrmInboxController::inbox(), FrmAnimate import url fix and timeToFinish declaration update, revert welcombe banner background color, function to handle the settings check in FrmListHelper

--- a/css/admin/dashboard.css
+++ b/css/admin/dashboard.css
@@ -79,7 +79,7 @@
 	box-sizing: border-box;
 	position: relative;
 	overflow: hidden;
-	background: var(--primary-700);
+	background: #4199FD;
 	border-radius: var(--small-radius);
 }
 
