--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -2403,6 +2403,21 @@ h2.frm-h2 + .howto {
 	padding-top: 4px;
 }
 
+.frm-addon-not-installed .frm-activate-addon,
+.frm-addon-not-installed .frm-deactivate-addon,
+.frm-addon-not-installed .frm-uninstall-addon,
+.frm-addon-installed .frm-install-addon,
+.frm-addon-installed .frm-deactivate-addon,
+.frm-addon-active  .frm-activate-addon,
+.frm-addon-active  .frm-install-addon,
+.plugin-card-pro.frm-addon-active .button {
+	display: none !important;
+}
+
+#frm-addons-page .frm-addon-button {
+	opacity: 1 !important;
+}
+
 .frm-save-and-reload-options {
 	margin-top: 10px;
 	font-size: 13px;
