--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -65,6 +65,9 @@
 	--box-shadow-md: 0px 1.88298px 3.76596px -0.941489px rgba(16, 24, 40, 0.1), 0px 0.941489px 1.88298px -0.941489px rgba(16, 24, 40, 0.06);
 	--box-shadow-lg: 0px 6px 8px -2px rgba(16, 24, 40, 0.08), 0px 1.88298px 4px -1px rgba(16, 24, 40, 0.03), 0px 0.470745px 1.41223px rgba(16, 24, 40, 0.1), 0px 0.470745px 0.941489px rgba(16, 24, 40, 0.06);
 	--box-shadow-xl: 0px 9.41489px 11.2979px -1.88298px rgba(16, 24, 40, 0.08), 0px 3.76596px 3.76596px -1.88298px rgba(16, 24, 40, 0.03);
+
+	/* Override front-end CSS */
+	--check-label-color: var(--grey-700);
 }
 
 @font-face {
@@ -4833,7 +4836,7 @@ To use this element, you can call the FrmHtmlHelper::toggle function.
 
 .frm_on_label,
 .frm_off_label {
-	color: #444444;
+	color: var(--grey-700);
 }
 
 .frm_toggle {
@@ -4845,7 +4848,7 @@ To use this element, you can call the FrmHtmlHelper::toggle function.
 }
 
 .frm_toggle_block {
-	display: inline-flex;
+	display: inline-flex !important;
     gap: var(--gap-sm);
 	align-items: center;
 }
