Refactor code, update icon position

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -7090,7 +7090,7 @@ i.frm-show-inline-modal,
 	top: 0;
 }
 
-.frm_form_settings .wp-editor-container .frm-with-right-icon .frmsvg {
+.frm_form_settings .wp-editor-container .frm-with-right-icon .frmsvg,  #frm_builder_page .wp-editor-container .frm-with-right-icon .frmsvg {
 	top: auto;
 	bottom: 0;
 }
