--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -971,7 +971,7 @@ p.frm_has_shortcodes {
 	margin: 0 -4px;
 }
 
-.frm_form_settings span.frm-with-right-icon {
+.frm_form_settings span.frm-with-right-icon, #frm_builder_page span.frm-with-right-icon {
 	display: block;
 }
 
