--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -5223,6 +5223,10 @@ label.frm-example-icon {
 }
 
 /* Import/Export */
+.frm-lite .xml_opts .frm-entries {
+	display: none;
+}
+
 .csv_opts #frm_csv_col_sep {
 	width: 45px;
 }
