Use $t instead of $type to accommodate translations

--- a/css/frm_admin.css
+++ b/css/frm_admin.css
@@ -5223,7 +5223,7 @@ label.frm-example-icon {
 }
 
 /* Import/Export */
-.frm-lite .xml_opts .frm-entries {
+.frm-lite .xml_opts .frm-items {
 	display: none;
 }
 
